--- a/lab 1/me.html
+++ b/lab 1/me.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Курорти для відпочинку</title>
 </head>
 
@@ -14,9 +15,9 @@
 </header>
 
 <main>
-    <img src="Сашка какашка.jpg" height="20%" width="20%">
+    <img src="ef1122c0-ee7f-45c3-88f5-89a710493fe7.jpg" height="20%" width="20%">
     <p>
-        Привіт! Я Олександра Карлівна. Люблю малювати портрети та весело проводити час.
+        Привіт! Я Олександра Карлівна
     </p>
 </main>
 
