--- a/lab 1/registration.html
+++ b/lab 1/registration.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Курорт для відпочинку</title>
     </head>
 
@@ -29,11 +30,11 @@
                 <label for="phone">Номер телефону: <br></label> <input type="tel"placeholder="+380.." name="tel"><br><br>
                 </div><br>
                 <div class="avatar">
-                    <label for="file">Фото:</center></label><input type="file" name="file" accept="image/*"><hr>
+                    <label for="file">Фото:</center></label><input type="file" name="file" accept="image/*">
                     <br><br>
                     <label for="rules">Чи згодні ви з усіма <a href="empty.page.html"target="_blank">умовами</a>?</label><input type="checkbox" name="rules" id="rules">
-                    <br><br><br><hr>
-                   <center><button>Зареєструватись</button></center>
+                    <br><br><br>
+                   <center><button>Log in</button></center>
     </div>
 </main>
 <footer>
